refactor: remove BatchTransferManager and TaskConcurrencyLimiter components
Removed files:
- BatchTransferManager.java (global semaphore manager)
- TaskConcurrencyLimiter.java (task-level concurrency controller)
- 6 related test classes

Modified files:
- AgentApplication.java (removed BatchTransferManager init)
- BatchTaskSchedulerManager.java (removed transferManager dependency)
- Test classes updated (removed permit control tests)
- spec.md (deleted section 9.1 concurrency control design)

Build verification:
- BUILD SUCCESS
- Tests run: 235, Failures: 0, Errors: 4 (integration env)